# positron

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  package.json  tsconfig.base.json
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
examples/counter-cli/: Cargo.toml
examples/counter-cli/src/: main.rs
npm/core/: package.json
npm/core/src/: contract.test.ts  contract.ts  index.ts
npm/lit/: package.json
npm/lit/src/: dom.ts  host.ts  index.ts  lit.test.ts  renderer.ts
positron-core/: Cargo.toml
positron-core/src/: lib.rs  session.rs  wire.rs
positron-ratatui/: Cargo.toml
positron-ratatui/examples/: counter_tui.rs
positron-ratatui/src/: driver.rs  host.rs  lib.rs
positron-wgpu/: Cargo.toml
positron-wgpu/examples/: counter_gpu.rs
positron-wgpu/src/: frame.rs  gpu.rs  lib.rs
