[workspace]
resolver = "2"
members = [
    "positron-core",
    "positron-ratatui",
    "positron-wgpu",
    "examples/counter-cli",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["CambrianTech <joel@cambriantech.com>"]
repository = "https://github.com/CambrianTech/positron"
rust-version = "1.75"

[workspace.dependencies]
# Held at minimum versions matching airc / continuum so consumers
# don't get dragged into incompatible upgrades.
serde = { version = "1", features = ["derive"] }
ts-rs = { version = "10", features = ["uuid-impl", "serde-json-impl"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
# Terminal renderer surface (positron-ratatui, outlier A). ratatui re-exports
# its matching crossterm, so consumers use `ratatui::crossterm` and never
# risk a version skew against a separately-pinned crossterm.
ratatui = "0.29"
# GPU renderer surface (positron-wgpu, outlier B). wgpu is the run-everywhere
# GPU abstraction (Metal/Vulkan/DX12 native + WebGPU under WASM); pollster
# blocks on its async device bring-up off any runtime; bytemuck casts vertex
# structs to bytes for upload.
wgpu = "22"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
