[package]
name = "positron-core"
description = "Multi-target widget contract — ViewState, Renderer, host bridge, and AI perception hooks."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
ts-rs = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
